# ai-audit

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.org  claude-usage.md
assets/: judge-prompt.md
doc/: pain-bug.org
doc/pane-bug/: extract-filters.py
doc/resurrect-fix/: SKILL.md
src/: activity.rs  config.rs  empty_segments.rs  format.rs  lib.rs  main.rs  project.rs  provider.rs  session_detect.rs  session_filter.rs  session_index.rs  transcript.rs
src/claudecode/: info.rs  mod.rs  permissions.rs  session.rs  session_index.rs  transcript.rs
src/cli/: color.rs  def.rs  mod.rs
src/cli/action/: activity.rs  assisted_by.rs  last_session.rs  list_sessions.rs  mod.rs  permissions.rs  rate.rs  token_usage.rs  transcript.rs  usage.rs
src/cli/action/session/: delete.rs  info.rs  mod.rs  nudge.rs
src/opencode/: cache.rs  config.rs  db.rs  enrich.rs  info.rs  mod.rs  nudge.rs  permissions.rs  run.rs  server_client.rs  session_index.rs  status.rs  transcript.rs
src/pi/: command.rs  info.rs  mod.rs  run.rs  sanity.rs  session.rs  session_index.rs  transcript.rs
src/rate/: agent.rs  cache.rs  hash.rs  judge.rs  mod.rs  parse.rs  report.rs
tests/: empty_segments_e2e.rs  info_claudecode_jsonl.rs  info_json_output.rs  info_opencode_db.rs  info_pi_jsonl.rs  info_unknown_id.rs  nudge_resume_real_opencode.rs  session_delete_integration.rs  token_usage_latency_json_fields.rs  token_usage_llm_generation_cross_harness.rs
tests/common/: mod.rs  opencode_harness.rs
