[package]
name = "ai-audit"
version = "0.1.0"
edition = "2021"
description = "Audit tool for AI assistant sessions (Claude Code logs)"
authors = ["Valentin Lab <valentin.lab@kalysto.org>"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_yaml = "0.9"
regex = "1"
anyhow = "1"
dirs = "5"
kal-time = "0.1"
pager = "0.16"
colored = "2"
wait-timeout = "0.2"
log = "0.4"
rusqlite = { version = "0.31", features = ["bundled"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
